--- a/myresume.html
+++ b/myresume.html
@@ -110,7 +110,7 @@
 <section>
 		<nav>
 				<ul>
-						<li><a href = "aboutme.html">Home</a></li>
+						<li><a href = "index.html">Home</a></li>
 						<li><a href = "myresume.html">Personal Details</a></li>
 						<li><a href = "myresume2.html">Curriculum</a></li>
 						<li><a href = "myresume3.html">Co-curriculum</a></li>
