--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<p>Program Code: BA242</p>
 				<p>Faculty: Faculty Of Business And Management</p>
 				<p>Submission Date: 31<sup>th</sup> December 2020</p>
-				<p>Published URL:<a href = "https://my-resume-rafhan-amir.neocities.org/">myresumerafhanamir.neocities.org</a></p>
+				<p>Published URL:<a href = "https://rafhanamirrahmat.github.io/">https://rafhanamirrahmat.github.io/</a></p>
 				<p>Lecturer: Miss Nor Hayati Binti Kassim</p>
 		</article>
 		<aside>
